tests/errors/syntax_err06.v
module a;
initial
begin : label1
end: label2
endmodule

